force-app/main/default/objects/ProducMainSKU__c/ProducMainSKU__c.object-meta.xml
<CustomObject>
    <label>ProductMain SKU</label>
    <nameField>
        <label>Main SKU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductMain SKU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>