force-app/main/default/objects/ProducMainSKU__c/fields/CompositeKeyHash__c.field-meta.xml
<CustomField>
    <fullName>CompositeKeyHash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CompositeKeyHash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>