force-app/main/default/objects/ProducMainSKU__c/fields/Dencity__c.field-meta.xml
<CustomField>
    <fullName>Dencity__c</fullName>
    <formula>Product2Id__r.Dencity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dencity (kg/m3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>