force-app/main/default/objects/ProducMainSKU__c/fields/ERPGroupCode__c.field-meta.xml
<CustomField>
    <fullName>ERPGroupCode__c</fullName>
    <formula>Product2Id__r.ID_ERP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Group Code</label>
    <type>Text</type>
</CustomField>