force-app/main/default/objects/ProducMainSKU__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <formula>SUBSTITUTE(TEXT(Product2Id__r.Material__c),&apos;_&apos;,&apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material</label>
    <type>Text</type>
</CustomField>