force-app/main/default/objects/ProducMainSKU__c/fields/ProdFamily__c.field-meta.xml
<CustomField>
    <fullName>ProdFamily__c</fullName>
    <formula>TEXT(Product2Id__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prod. Family</label>
    <type>Text</type>
</CustomField>