force-app/main/default/objects/ProducMainSKU__c/fields/WeightKPM__c.field-meta.xml
<CustomField>
    <fullName>WeightKPM__c</fullName>
    <label>Linear Weight (kpm)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>