force-app/main/default/objects/ProducMainSKU__c/fields/WeightPPF__c.field-meta.xml
<CustomField>
    <fullName>WeightPPF__c</fullName>
    <label>Linear Weight (ppf)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>