force-app/main/default/objects/ProducMainSKU__c/recordTypes/Tubes.recordType-meta.xml
<RecordType>
    <fullName>Tubes</fullName>
    <active>true</active>
    <label>Tubes</label>
</RecordType>