force-app/main/default/objects/ProducMainSKU__c/recordTypes/Wheels.recordType-meta.xml
<RecordType>
    <fullName>Wheels</fullName>
    <active>true</active>
    <label>Wheels</label>
</RecordType>