force-app/main/default/objects/ProducMainSKU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProductType__c</columns>
    <columns>ProdFamily__c</columns>
    <columns>Product2Id__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>